--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/dat-gui/0.7.6/dat.gui.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/stats.js/r16/Stats.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.1.0/paho-mqtt.js"></script>
-    <script src="device_form.js"></script>
 
 </head>
 <body>
@@ -34,7 +33,7 @@
         <canvas id="output" />
     </div>
     <input type="number" aria-label="Connection Code" id="connection_code">
-    <button value="Connect" onclick="updateDeviceId()">Connect</button>
+    <button value="Connect" id="btn-click">Connect</button>
 
     <script src="camera.js" type="module"></script>
 </body>
