--- a/index.html
+++ b/index.html
@@ -34,7 +34,9 @@
     </div>
     <input type="number" aria-label="Connection Code" id="connection_code">
     <button value="Connect" id="btn-click">Connect</button>
-
+    <div id="the-pointer-to-show">
+        ☝
+    </div>
     <script src="camera.js" type="module"></script>
 </body>
 </html>
