--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </div>
         <div class="sk-spinner sk-spinner-pulse"></div>
     </div>
-    <div id='main' style='display:none'>
+    <div id='main' style='display:none' aria-label="Camera Feed with overlay for visual feedback">
         <video id="video" playsinline style=" -moz-transform: scaleX(-1);
         -o-transform: scaleX(-1);
         -webkit-transform: scaleX(-1);
@@ -34,7 +34,7 @@
     </div>
     <input type="number" aria-label="Connection Code" id="connection_code">
     <button value="Connect" id="btn-click">Connect</button>
-    <div id="the-pointer-to-show">
+    <div id="the-pointer-to-show" aria-label="visual feedback of point">
         ☝
     </div>
     <script src="camera.js" type="module"></script>
