--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 
 </head>
 <body>
+    <div id="notify">TXT</div>
     <div id="connect-div" class="connect-div full-div">
         <input id="connection_code" type="number" name="connection-div">
         <button id="btn-click">Start Connection</button>
